Closed Bug 1919144 Opened 1 year ago Closed 1 year ago

mailto link with bcc not working -puts bcc in to - IFF no account is configured

Categories

(Thunderbird :: Message Compose Window, defect)

Thunderbird 128
defect

Tracking

(thunderbird_esr128 wontfix, thunderbird132 affected)

RESOLVED FIXED
133 Branch
Tracking Status
thunderbird_esr128 --- wontfix
thunderbird132 --- affected

People

(Reporter: jan.mosig, Assigned: mkmelin)

References

Details

Attachments

(2 files)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:130.0) Gecko/20100101 Firefox/130.0

Steps to reproduce:

Tried to open a mailto link, e. g.: mailto:m.mustermann@domain.de?bcc=max.m@example.org

TB 128.2.1esr (32-Bit)
Windows Version 10.0.19045.4894
TB is set as default e-mail app

Actual results:

A new compose window opens. Only the "To" field is set to "m.mustermann@domain.de". The bcc field is empty.

Expected results:

A new compose window should have opened. The "to" field should be set to "m.mustermann@domain.de" and the "bcc" field should be set to "max.m@example.org".

That works for me (on linux, but that should not be OS specific).

Maybe helptful: The instance I used did have zero configured accounts. I used a fresh profile.

Tried it with a Thunderbird instance that had a profile configured. Works as expected. Not a bug but a feature?

I see that. If there's no account configured, it shouldn't be putting up the compose window at all - nothing will work. It should send the user to set up an account.

Component: Untriaged → Message Compose Window
Summary: mailto link with bcc not working → mailto link with bcc not working -puts bcc in to - IFF no account is configured
Duplicate of this bug: 1895533
Duplicate of this bug: 1921805

Instead, just open a 3pane so the user can set up an account first. Composing without an account won't obviously work,
and lead to strange bug reports like this.

Assignee: nobody → mkmelin+mozilla
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Attachment #9429809 - Attachment description: Bug 1919144 - Don't allow opening a compose window if no account is set up yet. r=#thunderbird-reviewers → Bug 1919144 - Don't open a compose window if no account is set up yet. r=#thunderbird-reviewers
Attachment #9429809 - Attachment description: Bug 1919144 - Don't open a compose window if no account is set up yet. r=#thunderbird-reviewers → Bug 1919144 - Don't open a compose window if no account is set up yet. r=leftmostcat
Target Milestone: --- → 133 Branch

Pushed by brendan@thunderbird.net:
https://hg.mozilla.org/comm-central/rev/159ba56a3510
Don't open a compose window if no account is set up yet. r=leftmostcat

Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Backout by brendan@thunderbird.net: https://hg.mozilla.org/comm-central/rev/55b0d050d820 Backed out changeset 159ba56a3510 for causing test failures. r=backout
Status: RESOLVED → REOPENED
Resolution: FIXED → ---

Pushed by brendan@thunderbird.net:
https://hg.mozilla.org/comm-central/rev/e89bb85fe630
Don't open a compose window if no account is set up yet. r=leftmostcat

Status: REOPENED → RESOLVED
Closed: 1 year ago1 year ago
Resolution: --- → FIXED
Status: RESOLVED → REOPENED
Resolution: FIXED → ---

Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/40f07233126c
Follow up: Create an identity for the test that needs to open a compose window. r=darktrojan

Status: REOPENED → RESOLVED
Closed: 1 year ago1 year ago
Resolution: --- → FIXED

Not worth uplifting I think.

Regressions: 1956258
Blocks: tb140found
No longer blocks: tb140found
Regressions: 1977609
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: