Bug 1919144 - Don't open a compose window if no account is set up yet. r=leftmostcat

Differential Revision: https://phabricator.services.mozilla.com/D225026

--HG--
extra : amend_source : be08a58f195ed30412643bf4990fb298cd4eb30d